--- a/src/components/add-user/AddUser.css
+++ b/src/components/add-user/AddUser.css
@@ -1,6 +1,20 @@
 #add-user {
-    display: flex;
-    flex-direction: column;
-    max-width: 20em;
-    margin: auto;
-  }
+  display: flex;
+  flex-direction: column;
+  max-width: 20em;
+  margin: auto;
+  color: white;
+}
+
+#register a {
+  color: white;
+  text-decoration: none;
+}
+
+#register-button {
+  background-color: rgb(41, 163, 240);
+}
+
+#register-button:hover {
+  background-color: rgb(62, 85, 101);
+}
