--- a/src/components/login-form/LoginForm.css
+++ b/src/components/login-form/LoginForm.css
@@ -3,4 +3,15 @@
   flex-direction: column;
   max-width: 20em;
   margin: auto;
+  color: white;
 }
+
+#login-button {
+  background-color: rgb(41,163,240);
+}
+
+#login-button:hover {
+  background-color: rgb(62,85,101);
+}
+
+
