--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,10 +1,9 @@
 #menu {
-  background-color: lightskyblue;
+  background-color: rgb(77,77,77);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1em;
-  border-radius: 1em;
 }
 
 #menu-links {
@@ -13,8 +12,20 @@
 }
 
 #menu-links a {
-  padding-right: 0.5em;
-  color: darkblue;
-  text-decoration: underline;
+  padding: 0.5em;
+  color: white;
   cursor: pointer;
+}
+
+#menu-links a:hover {
+  padding: 0.5em;
+  color: rgb(41,163,240);
+  cursor: pointer;
+  background-color: rgb(21,32,43);
+  border-radius: 1em;
+  text-decoration: none;
+}
+
+#KwitterLogo {
+  height: 100px;
 }
