--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -6,7 +6,8 @@
 }
 
 #title {
-    padding-left: 1em;
+    padding-left: 0.5em;
+    padding-top: 0.3em;
 }
 
 #photo-form {
@@ -40,9 +41,11 @@
 #delete-button {
     margin-left: 1em;
     margin-bottom: 1em;
-    width: 40%;
+    width: 45%;
     font-size: small;
 }
+
+
 
 
 
