--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,9 +1,13 @@
 #menu {
-  background-color: rgb(77,77,77);
+  background-color: rgb(77, 77, 77);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1em;
+  position: sticky;
+  overflow: hidden;
+  top: 0;
+  z-index: 1;
 }
 
 #menu-links {
@@ -19,9 +23,9 @@
 
 #menu-links a:hover {
   padding: 0.5em;
-  color: rgb(41,163,240);
+  color: rgb(41, 163, 240);
   cursor: pointer;
-  background-color: rgb(21,32,43);
+  background-color: rgb(21, 32, 43);
   border-radius: 1em;
   text-decoration: none;
 }
